Added responsive image code

--- a/css/screen.css
+++ b/css/screen.css
@@ -23,3 +23,14 @@ html {
     background: #e85e00;
     color: white;
 }
+
+/*
+    Elements: Images
+    ---
+    Default markup for images to make them responsive
+*/
+
+img {
+    max-width: 100%;
+    vertical-align: top;
+}
