--- a/css/screen.css
+++ b/css/screen.css
@@ -113,15 +113,16 @@ hr {
 }
 
 a {
-
-}
-
-a:hover,
-a:focus {
-
+    color: RoyalBlue;
+    transition: all .1s ease-in-out;
 }
 
 a:visited,
 a:active {
+    color: BlueViolet;
+}
 
+a:hover,
+a:focus {
+    color: crimson;
 }
